# joinmarket-clientserver

./: .gitignore  conftest.py  pyproject.toml
.github/workflows/: build.yml  unittests.yml
docs/: TESTING.md  frost-wallet-dev.md  frost-wallet.md  taproot-wallet.md
scripts/: add-utxo.py  bdecode.py  bencode.py  bond-calculator.py  bumpfee.py  genwallet.py  joinmarket-qt.py  qtsupport.py  receive-payjoin.py  scripts_support.py  sendpayment.py  sendtomany.py  tumbler.py  wallet-tool.py  yg-privacyenhanced.py  yield-generator-basic.py
scripts/obwatch/: ob-watcher.py
scripts/snicker/: create-snicker-proposal.py  receive-snicker.py  snicker-finder.py  snicker-recovery.py  snicker-seed-tx.py  snicker-server.py
src/jmbase/: __init__.py  commands.py  support.py
src/jmbitcoin/: scripteval.py  secp256k1_deterministic.py  secp256k1_main.py  secp256k1_transaction.py
src/jmclient/: __init__.py  auth.py  blockchaininterface.py  cli_options.py  client_protocol.py  commitment_utils.py  configure.py  cryptoengine.py  descriptor.py  frost_clients.py  frost_ipc.py  jsonrpc.py  maker.py  output.py  payjoin.py  podle.py  scripts_support.py  snicker_receiver.py  storage.py  support.py  taker.py  taker_utils.py  wallet.py  wallet_rpc.py  wallet_service.py  wallet_utils.py  websocketserver.py  yieldgenerator.py
src/jmdaemon/: __init__.py  daemon_protocol.py  irc.py  message_channel.py  onionmc.py  orderbookwatch.py  protocol.py
src/jmfrost/: __init__.py
src/jmqtui/: _compile.py  open_wallet_dialog.py
test/: bitcoin.conf  regtest_frost_joinmarket.cfg  regtest_taproot_joinmarket.cfg  run_tests.sh
test/jmclient/: commontest.py  test_auth.py  test_blockchaininterface.py  test_client_protocol.py  test_coinjoin.py  test_configure.py  test_core_nohistory_sync.py  test_frost_clients.py  test_frost_ipc.py  test_frost_wallet.py  test_maker.py  test_payjoin.py  test_podle.py  test_psbt_wallet.py  test_snicker.py  test_taker.py  test_taproot_wallet.py  (+9 more)
(+22 files in other folders)
