[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joinmarket"
version = "0.9.12dev"
description = "Joinmarket client library for Bitcoin coinjoins"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
dependencies = [
    "chromalog==1.0.5",
    "cryptography==42.0.4",
    "service-identity==21.1.0",
    "twisted@git+https://github.com/zebra-lucky/twisted@fix_from_pr11890#egg=twisted",
    "txtorcon==23.11.0",
]

[project.optional-dependencies]
jmbitcoin = [
    "python-bitcointx@git+https://github.com/zebra-lucky/python-bitcointx@disable_contextvars#egg=python-bitcointx",
]
jmclient = [
    "argon2_cffi==21.3.0",
    "autobahn==20.12.3",
    "fastbencode==0.3.6",
    "klein==20.6.0",
    "mnemonic==0.20",
    "pyjwt==2.4.0",
    "werkzeug==2.2.3",
]
jmdaemon = [
    "libnacl==1.8.0",
    "pyopenssl==24.0.0",
]
jmfrost = [
]
jmqtui = [
    "PySide6==6.9.0",  # https://bugreports.qt.io/browse/QTBUG-88688
    "qrcode[pil]==7.3.1",
    'pywin32; platform_system == "Windows"',
    "qt5reactor@git+https://github.com/zebra-lucky/qt5reactor@update_versioneer#egg=qt5reactor",
]
client = [
    "joinmarket[jmclient]",
    "joinmarket[jmbitcoin]",
    "joinmarket[jmfrost]",
]
daemon = [
    "joinmarket[jmdaemon]",
]
services = [
    "joinmarket[client]",
    "joinmarket[daemon]",
]
test = [
    "joinmarket[services]",
    "coverage==5.2.1",
    "flake8",
    "freezegun",
    "mock",
    "pexpect",
    "pytest-cov>=2.4.0,<2.6",
    "pytest==6.2.5",
    "python-coveralls",
]
gui = [
    "joinmarket[services]",
    "joinmarket[jmqtui]",
]

[project.urls]
repository = "https://github.com/JoinMarket-Org/joinmarket-clientserver.git"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.test"]

[tool.pytest.ini_options]
testpaths = ["test"]
